crates/capsec/tests/compile_fail/logged_cap_is_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
 --> tests/compile_fail/logged_cap_is_not_send.rs:7:19
  |
7 |     assert_send::<LoggedCap<FsRead>>();
  |                   ^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
  |
  = help: within `capsec::LoggedCap<capsec::FsRead>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `capsec::LoggedCap<capsec::FsRead>`
 --> $WORKSPACE/crates/capsec-core/src/prescript.rs
  |
  | pub struct LoggedCap<P: Permission> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/logged_cap_is_not_send.rs:4:19
  |
4 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`
